# taus

./: .env.example  Cargo.toml  README.md
migrations/2021-07-14-023051_create_config/: down.sql  up.sql
migrations/2021-07-14-213638_create_target_mappings/: down.sql  up.sql
src/: cors.rs  crud.rs  github.rs  main.rs  models.rs  schema.rs  tauri.rs  version.rs
web/: package.json
web/src/: .dir-locals.el  App.js  crud.js  index.js
web/src/components/Config/: index.js
web/src/components/Mappings/: index.js
web/src/components/Targets/: index.js
web/src/components/Utils/: index.js  magnify_on_hover.scss
