[package]
name = "taus"
version = "0.1.0"
authors = ["Gabe Cohen <gcc3.14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
semver = "1.0.3"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
regex = "1.5.3"
reqwest = { version = "0.11.4", features = ["json"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool"]